objects/Export_Control_Form__c.object
<CustomObject>
    <description>Device&apos;s Export Control Form</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Export Control Form</relationshipLabel>
        <relationshipName>Export_Control_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anti_jam_system__c</fullName>
        <label>Anti-jam system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIS_Registration__c</fullName>
        <label>BIS Registration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCAT_Number__c</fullName>
        <label>CCAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Satellite__c</fullName>
        <label>Commercial Satellite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Trade_Compliance_Contact_Person__c</fullName>
        <description>Customer&apos;s Compliance Contact Person</description>
        <inlineHelpText>Customer&apos;s Compliance Contact Person</inlineHelpText>
        <label>Customer Trade Compliance Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D1_National_Access_is_Allowed__c</fullName>
        <description>Viewed by GF Internal User ONLY
Editable by GTC only</description>
        <inlineHelpText>Viewable by Internal User and
Editable by GTC only.</inlineHelpText>
        <label>D1 National Access is Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNPETLID__c</fullName>
        <externalId>true</externalId>
        <label>DNPETLID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DPL_HelperFld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPL HelperFld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denied_Info__c</fullName>
        <formula>IF( Unauthorized_Percentage__c &gt; 75,
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Red.jpg&quot;, &quot;red&quot;, 30, 30),
			IF( AND(Unauthorized_Percentage__c &lt;= 75,Unauthorized_Percentage__c &gt;= 50),
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Red.jpg&quot;, &quot;red&quot;, 30, 30),
			IF(AND(Unauthorized_Percentage__c &lt; 50,Unauthorized_Percentage__c &gt;= 1),
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Orange.jpg&quot;, &quot;Orange&quot;, 30, 30),
			IF( Unauthorized_Percentage__c == 0,
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Green.jpg&quot;, &quot;green&quot;, 30, 30),
			&apos;&apos;
			))))+
			IF(Unauthorized_Percentage__c != 0,
			&quot;This company has been flagged as a denied party listed organization. &quot; &amp; BR() &amp; &quot;Please contact global_trade@globalfoundries.com , if you believe this to be incorrectly flagged.&quot;,
			&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If denied percentage
			a) Less than 50(Customer Legal - Green Flag)
			b) Equals To 50(Not Legal - Red Flag)</inlineHelpText>
        <label>Denied Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Party_Percentage1__c</fullName>
        <formula>Unauthorized_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Party Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designed_for_Antennas__c</fullName>
        <label>Designed for Antennas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designed_for_Att_Det__c</fullName>
        <label>Designed for Attitude Determination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designed_for_Proplsn_Sys__c</fullName>
        <label>Designed for Propulsion Systems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECCN_Color__c</fullName>
        <label>ECCN Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GREEN</fullName>
                </value>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>YELLOW</fullName>
                </value>
                <value>
                    <fullName>ORANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECCN_Product_Value__c</fullName>
        <label>ECCN Product Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_Technology_Data__c</fullName>
        <label>ECCN Technology  Data</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_Technology__c</fullName>
        <label>ECCN-Technology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_Wafer__c</fullName>
        <label>ECCN-Wafer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_CCATS__c</fullName>
        <label>EC CCATS#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_ENC_Type__c</fullName>
        <label>740.17 sub paragraph for GF Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(b)(3) Standard encryption chips (includes mass market items)</fullName>
                </value>
                <value>
                    <fullName>(b)(3) Non-standard encryption chips (includes mass market items)</fullName>
                </value>
                <value>
                    <fullName>(b)(2) Cryptanalytic</fullName>
                </value>
                <value>
                    <fullName>(b)(2) OCI</fullName>
                </value>
                <value>
                    <fullName>(b)(2) Not cryptanalytic or OCI</fullName>
                </value>
                <value>
                    <fullName>(b)(2) Non-standard cryptography</fullName>
                </value>
                <value>
                    <fullName>(b)(2) None of the above (not cryptographic, OCI or non- standard)</fullName>
                </value>
                <value>
                    <fullName>N/A - Not Applicable</fullName>
                </value>
                <value>
                    <fullName>(b)(2) None of the above (not cryptographic, OCI or non-standard)</fullName>
                </value>
                <value>
                    <fullName>(b)(3) Non-standard encryption chips</fullName>
                </value>
                <value>
                    <fullName>(b)(3) Standard encryption chips</fullName>
                </value>
                <value>
                    <fullName>(b)(3) Standrad encryption chips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Status__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Undeclared&apos;),&apos;Draft&apos;,Text(Status__c))</formula>
        <label>EC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Contact person&apos;s Email address</description>
        <inlineHelpText>Contact person&apos;s Email address</inlineHelpText>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encryption_Control_Product__c</fullName>
        <label>Encryption Control Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Customer_Name__c</fullName>
        <description>Note: From April 2014, it is a requirement to submit End User info to Singapore Customs as part of the export declaration. Where this info is not available or if the device will not be manufactured in Singapore, please input N.A. into this field.</description>
        <inlineHelpText>For the purpose of denied party screening, as part of export control 
requirements, please list the End User company name. If there are too 
many end user names, or the end user is not identified yet, you may list 
your company name.</inlineHelpText>
        <label>End User Customer Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Control_Template__c</fullName>
        <label>Export Control Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Switch Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>PA Controller Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Low Noise Amplifier (LNA) Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Antenna Tuner Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Low Noise Amplifier (LNA) Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Switch Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Controller Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>RF Switch Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Management Devices for Battery/Charger End Use Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <label>FAB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FV_Login_ID__c</fullName>
        <label>FV Login ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabricated_by_GF__c</fullName>
        <label>Fabricated by GF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harmonized_System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>&lt;apex:selectRadio&gt;
Selected By VisualForce custom radio buttons and populate codes from object ExportControlHSCode</description>
        <inlineHelpText>Q7. Please provide the Harmonized System classification for the finished wafers (for example, 8542.31 or 8542.39).</inlineHelpText>
        <label>Harmonized System</label>
        <referenceTo>Export_Control_HS_Code__c</referenceTo>
        <relationshipLabel>Export Control Form</relationshipLabel>
        <relationshipName>Export_Control_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ITAR_Cat_Equipment__c</fullName>
        <label>ITAR Cat Equipment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_Cat_IC__c</fullName>
        <label>ITAR Cat IC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_Cat_Tech_Data__c</fullName>
        <label>ITAR Cat Tech Data</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_Category_Full__c</fullName>
        <label>ITAR Category Full</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
                <value>
                    <fullName>VIII</fullName>
                </value>
                <value>
                    <fullName>IX</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>XI</fullName>
                </value>
                <value>
                    <fullName>XII</fullName>
                </value>
                <value>
                    <fullName>XIII</fullName>
                </value>
                <value>
                    <fullName>XIV</fullName>
                </value>
                <value>
                    <fullName>XV</fullName>
                </value>
                <value>
                    <fullName>XVI</fullName>
                </value>
                <value>
                    <fullName>XVII</fullName>
                </value>
                <value>
                    <fullName>XVIII</fullName>
                </value>
                <value>
                    <fullName>XIX</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
                <value>
                    <fullName>XXI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITAR_Category__c</fullName>
        <label>ITAR Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XV(a)</fullName>
                </value>
                <value>
                    <fullName>XV(c)</fullName>
                </value>
                <value>
                    <fullName>XV(e)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITAR_Flag__c</fullName>
        <formula>TEXT(ITAR_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITAR Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITAR_Product_Details__c</fullName>
        <description>Q4. ITAR Product Details</description>
        <inlineHelpText>If a CJ is not available please provide the ITAR Category(ies) down to the subparagraphs.</inlineHelpText>
        <label>ITAR Product Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITAR_Product__c</fullName>
        <description>Q4. ITAR Product</description>
        <inlineHelpText>Are the product and the associated technology/technical data subject to the International Traffic in Arms Regulations (&quot;ITAR&quot;, 22 CFR Part 120 et seq.) ?</inlineHelpText>
        <label>ITAR Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <formula>LastModifiedBy.LastName + &apos;, &apos; + LastModifiedBy.FirstName + &apos;(&apos; + LastModifiedBy.Username + &apos;)&apos;</formula>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_Customer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System generated
Last assigned customer user</description>
        <inlineHelpText>will be captured in a trigger during form owner change (when the form is change to another customer only). The logic should make sure that this will be the ‘Last assigned customer user’, so that we can use this field for ‘reject’ and other scenarios.</inlineHelpText>
        <label>Last Assigned Customer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Export_Control_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPW_Aggregator__c</fullName>
        <label>MPW Aggregator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPW_Coordinator_Name__c</fullName>
        <label>MPW Coordinator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Coordinator_Phone__c</fullName>
        <label>MPW Coordinator Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Preparer_Name__c</fullName>
        <label>MPW Preparer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Preparer_Phone__c</fullName>
        <label>MPW Preparer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Wafer_Run_Name__c</fullName>
        <label>MPW Wafer Run Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_App_Product_Details__c</fullName>
        <description>Q3. Military App Product Details</description>
        <inlineHelpText>If Q3 is yes, give a brief description of the military application</inlineHelpText>
        <label>Military App Product Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Military_App_Product__c</fullName>
        <description>Q3. Military App Product</description>
        <inlineHelpText>Is this product specially designed, modified, or adapted for a military application?</inlineHelpText>
        <label>Military App Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Encryption_ECCN_Technology__c</fullName>
        <label>Non Encryption ECCN Technology</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_US_EAR_Product_Details__c</fullName>
        <description>Q6. Non US EAR Product Details</description>
        <inlineHelpText>Q6. If yes, please provide the name of the jurisdiction and the export control classification number (ECCN). Note: Provide the ECCNs for both the design technology and the finished wafers, if applicable:</inlineHelpText>
        <label>Non US Controlled Product Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_US_EAR_Product__c</fullName>
        <description>Q6. Non US EAR Product</description>
        <inlineHelpText>Q6. Is the product or the associated technical data subject to export controls in other (non-US) jurisdictions?</inlineHelpText>
        <label>Non US Controlled Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_to_New_Owner__c</fullName>
        <label>Notes to New Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Harmonized_System__c</fullName>
        <description>Other Harmonized System</description>
        <inlineHelpText>Please fill if &apos;Others&apos; is choosen in Q7.</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Export_Control_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact person&apos;s phone number</description>
        <inlineHelpText>Contact person&apos;s phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preparation_Date__c</fullName>
        <label>Preparation Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_D1_National_Access_is_Allowed__c</fullName>
        <label>Prev D1 National Access is Allowed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Q1. Product Description</description>
        <inlineHelpText>Please provide a brief description of the product to be manufactured by GLOBALFOUNDRIES and the final end use for the product (for example, “baseband for mobile phone” or “application processor for MP3 player”).</inlineHelpText>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sobject_Type__c</fullName>
        <label>Sobject Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Undeclared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>System generated, Readonly field</description>
        <inlineHelpText>System generated, Read-Only field.</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USG_Review_Date__c</fullName>
        <label>USG Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_EAR_Product_Details__c</fullName>
        <description>Q5. US EAR Product Details</description>
        <inlineHelpText>If a CCATS is not available please confirm BIS registration and provide the ECCN(s) down to the subparagraphs. 
Note: Provide the ECCNs for both the design technology and the finished wafers, if applicable.</inlineHelpText>
        <label>US EAR Product Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>US_EAR_Product__c</fullName>
        <description>Q5. US EAR Product (Export Administration Regulations)</description>
        <inlineHelpText>Is the product or the associated technical data subject to the U.S. Export Administration Regulations (&quot;EAR&quot;, 15 CFR Part 730 et seq.)?</inlineHelpText>
        <label>US EAR Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unauthorized_Modified_Date__c</fullName>
        <label>Denied Party Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unauthorized_Percentage__c</fullName>
        <inlineHelpText>Matching percentage with MKD list</inlineHelpText>
        <label>Denied Party Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unauthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag set after validating &quot;End Customer&quot; with MKD system, only GTC team can make update it.</inlineHelpText>
        <label>Is this customer a denied party to GF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_by_Govt_of_Canada__c</fullName>
        <label>Used by Govt of Canada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weapon_Product__c</fullName>
        <description>Q2. Weapon Product</description>
        <inlineHelpText>Is the product to be manufactured by GLOBALFOUNDRIES intended or likely to be used, wholly or in part, for or inconnection with weapons?</inlineHelpText>
        <label>Weapon Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekly_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>b2_Desc_Type__c</fullName>
        <label>(b)(2) Describe Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>b3_Desc_Type__c</fullName>
        <label>(b)(3) Describe Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isNewECForm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isNewECForm</label>
        <type>Checkbox</type>
    </fields>
    <label>Export Control Form</label>
    <listViews>
        <fullName>GTC_Team_Users</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Submitted,Pending Resubmission</value>
        </filters>
        <label>GTC Team Users-me</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EXP{YYYY}{MM}{000000}</displayFormat>
        <label>Export Control Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Control Form</pluralLabel>
    <recordTypes>
        <fullName>Export_Control_Form_Main</fullName>
        <active>true</active>
        <label>Export Control Form Main</label>
    </recordTypes>
    <recordTypes>
        <fullName>GF_Internal_Lock</fullName>
        <active>true</active>
        <description>Page Layout will lock all the fields except the D1 National Access.</description>
        <label>GF Internal – Lock</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Design_Partner_Sharing__c</fullName>
        <label>Design Partner Sharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>FoundryView_User__c</fullName>
        <label>FoundryView User</label>
    </sharingReasons>
    <validationRules>
        <fullName>D1_National_Access_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(D1_National_Access_is_Allowed__c), RecordType.Name = &apos;GF Internal – Lock&apos;,  $UserRole.Name &lt;&gt; &apos;GTC - Global Trade Compliance&apos;)</errorConditionFormula>
        <errorMessage>Only GTC user can edit &apos;D1 National Access is Allowed&apos; field.</errorMessage>
    </validationRules>
</CustomObject>